--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 csv = "1.3.1"
-rust_decimal = "1.37.2"
+rust_decimal = { version = "1.37.2", features = ["macros"] }
 serde = { version = "1.0.219", features = ["derive"] }
